# race-strategy-sim

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  index.html  script.js  settings.json
src/: car.cpp  car.hpp  circuit.cpp  circuit.hpp  config.hpp  main.cpp  race.cpp  race.hpp  tire.cpp  tire.hpp
